--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@typeform/embed": "^1.20.1",
+    "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-cool-portal": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-laag": "^2.0.3",
+    "react-poppop": "^1.5.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.1",
+    "styled-modal": "^7.1.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
